# CsoundRaw

./: .gitignore  CsoundRaw.cabal  LICENSE  README.md  csound.cabal  stack.yaml
src/Sound/: Csound.hs
src/Sound/Csound/: Attributes.hs  ChannelsControlEvents.hs  Debugger.hs  FunctionTableDisplay.hs  GeneralIO.hs  Instantiation.hs  MessagesAndText.hs  Miscellaneous.hs  Opcodes.hs  Performance.hs  RealtimeAudioIO.hs  RealtimeMidiIO.hs  ScoreHandling.hs  Tables.hs  Threading.hs  Types.hs
test/: HSpecTests.hs  Test.hs
tests/: HSpecTests.hs
