name:                   CsoundRaw
version:                0.0.0.1
synopsis:               Complete Csound 6 raw bindings (WIP)
description:            Please see README.md
homepage:               https://github.com/oldmanmike/CsoundRaw
bug-reports:            https://github.com/oldmanmike/CsoundRaw/issues
license:                BSD3
license-file:           LICENSE
author:                 Michael Carpenter
maintainer:             Michael Carpenter <oldmanmike.dev@gmail.com>
copyright:              Copyright (C) 2016 Michael Carpenter
category:               Sound, Music
build-type:             Simple
extra-source-files:     LICENSE, README.md
cabal-version:          >=1.10

Source-repository head
    type:     git
    location: https://github.com/oldmanmike/CsoundRaw


library
  hs-source-dirs:       src
  extra-libraries:      csound
  ghc-options:          -Wall -O2
  other-modules:
  other-extensions:
  build-depends:        base >= 4.7 && < 5,
                        transformers

  default-language:     Haskell2010

  exposed-modules:
    Sound.Csound
    Sound.Csound.Attributes
    Sound.Csound.ChannelsControlEvents
    --Sound.Csound.Debugger
    Sound.Csound.FunctionTableDisplay
    Sound.Csound.GeneralIO
    Sound.Csound.Instantiation
    Sound.Csound.MessagesAndText
    Sound.Csound.Miscellaneous
    Sound.Csound.Opcodes
    Sound.Csound.Performance
    Sound.Csound.RealtimeAudioIO
    Sound.Csound.RealtimeMidiIO
    Sound.Csound.ScoreHandling
    Sound.Csound.Tables
    Sound.Csound.Threading
    Sound.Csound.Types

test-suite csound-test
    hs-source-dirs:     test
    ghc-options:        -Wall
    default-extensions: OverloadedStrings
    type:               exitcode-stdio-1.0
    main-is:            Tests.hs
    build-depends:      base,
                        CsoundRaw
    default-language:   Haskell2010
